Cross-referencing both the figures in 5.2

--- a/index.Rmd
+++ b/index.Rmd
@@ -261,11 +261,11 @@ ggplot( aes(x=income_lvl, y=eachscho, fill= campus)) +
 
 ```
 
-In the US, university courses are broadly offered on campus and off campus. Though there is only a little difference between the net_cost of both on campus and off campus courses, the total_cost varies significantly and hence we have displayed them independent of each other. In figure \@ref(fig:) we have the average cost that a student incurs across various income groups and in figure \@ref(fig:) we have the scholarships earned by students across various income groups. A point to note is that the variable net_cost has a lot of *negative values*. One may wonder how can the tuition paid be negative. Upon further probing we found out that a lot of universities provide financial assistance to students and extend it to their families as well. This is the reason the variable net_cost shows negative values. Also, the data for on campus courses for the year 2010 is missing. Besides we have also recoded the category of income level of *48,001 to 75,000* which earlier was *48_000 to 75,000*.
+In the US, university courses are broadly offered on campus and off campus. Though there is only a little difference between the net_cost of both on campus and off campus courses, the total_cost varies significantly and hence we have displayed them independent of each other. In figure \@ref(fig:stunetfee) we have the average cost that a student incurs across various income groups and in figure \@ref(fig:stuscholar) we have the scholarships earned by students across various income groups. A point to note is that the variable net_cost has a lot of *negative values*. One may wonder how can the tuition paid be negative. Upon further probing we found out that a lot of universities provide financial assistance to students and extend it to their families as well. This is the reason the variable net_cost shows negative values. Also, the data for on campus courses for the year 2010 is missing. Besides we have also recoded the category of income level of *48,001 to 75,000* which earlier was *48_000 to 75,000*.
 
-In Figure \@ref(fig:) we group by the year, net cost and the income levels and summarise using the mean to arrive at the average tuition cost students pay across various income groups. It is clear from the figure that students in lower income groups tend to tae less burden of tuition fee as compared to students with higher income groups over the years.
+In Figure \@ref(fig:stunetfee) we group by the year, net cost and the income levels and summarise using the mean to arrive at the average tuition cost students pay across various income groups. It is clear from the figure that students in lower income groups tend to tae less burden of tuition fee as compared to students with higher income groups over the years.
 
-In figure \@ref(fig:) we obtain the amount of scholarship earned by the students by finding out the difference between the total_cost an net_cost. Then we summarise using the mean to arrive at the average scholarship earned by each income group. Clearly, students in lower income groups earn more scholarships as compared to those in higher income groups over the years. An interesting point to note is that in 2017 and 2018 the income group of over 110,000 the off campus students have received more scholarships than on campus students.
+In figure \@ref(fig:stuscholar) we obtain the amount of scholarship earned by the students by finding out the difference between the total_cost an net_cost. Then we summarise using the mean to arrive at the average scholarship earned by each income group. Clearly, students in lower income groups earn more scholarships as compared to those in higher income groups over the years. An interesting point to note is that in 2017 and 2018 the income group of over 110,000 the off campus students have received more scholarships than on campus students.
 
 ## Student's Career Development among America Universities
 
